--- a/develop/source/start_page.html
+++ b/develop/source/start_page.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="scripts/start_annotation.js"></script>
 
 <body>
 <form>
