initial polaroid styling in annotation screen

--- a/source/annotation.html
+++ b/source/annotation.html
@@ -1,12 +1,25 @@
 <html>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="scripts/annotation.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
+	<link rel="stylesheet" href="styles/theme.css">
+	<link rel="stylesheet" href="styles/annotation.css">
     <body>
-        <center><h1>Annotation Page :) :) :)</h1>
-        <div id="name"></div>
-        <div id="structure"></div>
-        <img id="image" src=""></img>
-        </center>
+		<div class="container container-table">
+			<div class="row vertical-center-row">
+				<div class="polaroid">
+					<div class="polaroid-image">
+						<img id="image" src=""></img>
+					</div>
+					<div class="polaroid-text">
+						<h2 id="name"></h2>
+				        <h2 id="structure"></h2>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
     </body>
 </html>
-
