--- a/source/annotation.html
+++ b/source/annotation.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="styles/annotation.css">
     <body>
 		<div class="container container-table">
+			<div id="bad"></div>
 			<div class="row vertical-center-row">
 				<div class="polaroid">
 					<div class="polaroid-image">
@@ -17,9 +18,7 @@
 					</div>
 				</div>
 			</div>
+			<div id="good"></div>
 		</div>
-
-
-
     </body>
 </html>
