animate highlight correctly

--- a/source/start_page.html
+++ b/source/start_page.html
@@ -28,12 +28,12 @@
 					<div class="input-container">
 						<input type="text" id="name" name="name" required>
 						<span class="bar"></span>
-						<label>Enter Name:</label>
+						<label>Name:</label>
 					</div>
 					<div class="input-container">
 						<input type="text" id="structure" name="structure" required>
 						<span class="bar"></span>
-						<label>Enter Structure:</label>
+						<label>Structure:</label>
 					</div>
 					<div class="input-container">
 						<input type="submit" id="start" value="Start">
