--- a/source/start_page.html
+++ b/source/start_page.html
@@ -36,13 +36,12 @@
 						<label>Structure:</label>
 					</div>
 					<div class="input-container">
-						<input type="submit" id="start" value="Start">
+						<input type="submit" id="start" value="START">
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
-
 </body>
 
 </html>
