initial styling changes and squish images vertically to keep sizing the same.

--- a/source/annotation.html
+++ b/source/annotation.html
@@ -10,7 +10,7 @@
 			<div class="row vertical-center-row">
 				<div class="polaroid">
 					<div class="polaroid-image">
-						<img id="image" src=""></img>
+						<img id="image" src="">
 					</div>
 					<div class="polaroid-text">
 						<h2 id="name"></h2>
