Revert "Merged develop-isaac into master"
This reverts commit facee5fdf04bd684592d138a939d48935b5000a8.

--- a/source/start_page.html
+++ b/source/start_page.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div class="row">
-		<div class="col-md-3 vcenter" id="sidebar">
+		<div class="col-md-3 vcenter">
 			<div class="line"></div>
 		</div>
 		<div class="col-md-9 menu-container vcenter">
