Convert static resources to be served through Express
Move styles to top-level directory
Rename "source" to "pages"

--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -10,8 +10,8 @@
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
 
-	<link rel="stylesheet" href="styles/start_page.css">
-	<link rel="stylesheet" href="styles/theme.css">
+	<link rel="stylesheet" href="../styles/start_page.css">
+	<link rel="stylesheet" href="../styles/theme.css">
 	<script src="scripts/start_annotation.js"></script>
 	<script src="scripts/start_page.js"></script>
 </head>
