--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -2,8 +2,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="scripts/annotation.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
-	<link rel="stylesheet" href="styles/theme.css">
-	<link rel="stylesheet" href="styles/annotation.css">
+	<link rel="stylesheet" href="../styles/theme.css">
+	<link rel="stylesheet" href="../styles/annotation.css">
     <body>
 		<div class="container container-table">
 			<div id="bad"></div>
