Fix bad reverted merge. Begin adding name insertion on start of annotation.

--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -13,12 +13,11 @@
 	<link rel="stylesheet" href="../styles/start_page.css">
 	<link rel="stylesheet" href="../styles/theme.css">
 	<script src="scripts/start_annotation.js"></script>
-	<script src="scripts/start_page.js"></script>
 </head>
 
 <body>
 	<div class="row">
-		<div class="col-md-3 vcenter">
+		<div class="col-md-3 vcenter" id="sidebar">
 			<div class="line"></div>
 		</div>
 		<div class="col-md-9 menu-container vcenter">
