Remove form autocomplete. Change name error response in case username already exists.

--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -23,7 +23,7 @@
 		<div class="col-md-9 menu-container vcenter">
 			<div class="form-container">
 				<h1 id="title">CellSwiper</h1>
-				<form class="submit-form">
+				<form class="submit-form" autocomplete="off">
 					<div class="input-container">
 						<input type="text" id="name" name="name" required>
 						<span class="bar"></span>
