--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -1,6 +1,8 @@
 <html>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script> 
     <script src="scripts/annotation.js"></script>
+    <script src="scripts/jquery.hammer.js"></script> 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
 	<link rel="stylesheet" href="../styles/theme.css">
 	<link rel="stylesheet" href="../styles/annotation.css">
