change background color and layout of annotation page

--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -10,18 +10,23 @@
 	<link rel="stylesheet" href="../styles/theme.css">
 	<link rel="stylesheet" href="../styles/annotation.css">
     <body>
-        <div class="row">
+        <div id="navbar" class="row">
+            <div id="logo" class="col-md-9"></div>
+            <div id="user" class="col-md-3"></div>
+        </div>
+        <div id="swiper" class="row">
             <div id="bad" class="col-md-3"></div>
-            <div id="polaroid" class="col-md-6">
-                <div class="polaroid-image">
-                <img id="image" src="">
-                </div>
-                <div class="polaroid-text">
-                <h2 id="structure"></h2>
+            <div class="col-md-6">
+                <div id="polaroid">
+                    <div class="polaroid-image">
+                        <img id="image" src="">
+                    </div>
+                    <div class="polaroid-text">
+                        <h2 id="structure"></h2>
+                    </div>
                 </div>
             </div>
             <div id="good" class="col-md-3"></div>
         </div>
-
     </body>
 </html>
