border changes on hovering on sides

--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -22,7 +22,16 @@
                         <img id="image" src="">
                     </div>
                     <div class="polaroid-text">
-                        <h2 id="structure"></h2>
+                        <div class="row">
+                            <div id="bad-button" class="col-md-4">
+                                <span class="glyphicon glyphicon-remove"></span>
+                            </div>
+                            <div id="structure" class="col-md-4"></div>
+                            <div id="good-button" class="col-md-4">
+                                <span class="glyphicon glyphicon-ok"></span>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
