--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -27,12 +27,12 @@
 					<div class="input-container">
 						<input type="text" id="name" name="name" required>
 						<span class="bar"></span>
-						<label>Name:</label>
+						<label class="shift">Name:</label>
 					</div>
 					<div class="input-container">
 						<input type="text" id="structure" name="structure" required>
 						<span class="bar"></span>
-						<label>Structure:</label>
+						<label class="shift">Structure:</label>
 					</div>
 					<div class="input-container">
 						<input type="submit" id="start" value="START">
