--- a/pages/export.html
+++ b/pages/export.html
@@ -8,27 +8,9 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="../styles/theme.css">
+        <script src="../scripts/export.js"></script>
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
-        <script>
-            // move this out to separate file eventually
-            $(document).ready(() => {
-                // set max date for date select to be today
-                document.getElementById('date-select').max = (new Date()).toISOString().substring(0, 10);
-                $('#export-form').submit((ev) => {
-                    ev.preventDefault();
-                    let options = [];
-                    if (document.getElementById('name-check').checked) {
-                        options.push('name=' + $('#name-select option:selected')[0].value)
-                    }
-                    if (document.getElementById('date-check').checked) {
-                        options.push('before=' + $('#before-select option:selected')[0].value);
-                        options.push('date=' + document.getElementById('date-select').value);
-                    }
-                    window.location.href = '/export?' + options.join('&');
-                });
-            });
-        </script>
     </head>
     <body>
         <div class="row">
@@ -39,8 +21,6 @@
                 <label for="name-check">By Name</label>
                 <input id="name-check" type="checkbox" value="">
                 <select id="name-select" name="name-select">
-                    <option value="matt">Matt</option>
-                    <option value="test">Test</option>
                 </select>
             </div>
             <div class="form-group">
