--- a/pages/home.html
+++ b/pages/home.html
@@ -8,26 +8,47 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="../styles/home.css">
+    <script src="../scripts/home.js"></script>
+
     <meta charset="UTF-8">
 </head>
 <body>
-    <div class="row">
-        <div class="col-md-3" id="logo">
-            <h1>CellSwiper</h1>
+    <div class="row nav">
+        <!--Need to get hide these column margins when shifting to mobile screens-->
+        <!--Don't know if this is the best way... but I think the navbar stretching
+            across the whole screen looks better than scaling body to some % of screen-->
+        <div class="col-md-1 margin"></div>
+        <div class="col-md-2" id="logo">
+            <h3>CellSwiper</h3>
         </div>
-        <div class="col-md-6"></div>
-        <div class="col-md-3" id="account-info">
-            <h1>Username</h1>
+        <div class="col-md-6 margin"></div>
+        <div class="col-md-2" id="account-info">
+            <h3 id="name"></h3>
         </div>
+        <div class="col-md-1 margin"></div>
     </div>
     <div class="row">
-        <div class="col-md-6">
-            <h1>Directory</h1>
+        <div class="col-md-1 margin"></div>
+        <div class="col-md-5" id="image-dir">
+            <p>image directories</p>
         </div>
-        <div class="col-md-1"></div>
+        <div class="col-md-5" id="task-list">
+            <p>tasks</p>
+        </div>
+        <div class="col-md-1 margin"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1 margin"></div>
         <div class="col-md-5">
-            <h1>Tasks</h1>
+            <div id="new-batch">start new batch button</div>
         </div>
+        <div class="col-md-5">
+            <div id="continue-batch">continue batch button</div>
+        </div>
+        <div class="col-md-1 margin"></div>
     </div>
 </body>
 </html>
