--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -12,7 +12,7 @@
 
 	<link rel="stylesheet" href="../styles/start_page.css">
 	<link rel="stylesheet" href="../styles/theme.css">
-	<script src="scripts/start_annotation.js"></script>
+	<script src="../scripts/start_page.js"></script>
 </head>
 
 <body>
