Now loads directory from json file

--- a/pages/add_directory.html
+++ b/pages/add_directory.html
@@ -17,9 +17,10 @@
     </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div id="title" class="row">
             <h1>Add Annotation</h1>
         </div>
+        <!--
         <ul class="list-group">
             <li class="folder list-group-item">
                 <a role="button" class="folder-link collapsed" href="#collapseOne" data-toggle="collapse">
@@ -35,6 +36,7 @@
             <li class="folder list-group-item selected">etc/</li>
             <li class="folder list-group-item">dev/</li>
         </ul>
+        -->
     </div>
 </body>
 </html>
