--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<title>CellSwiper</title>
 	<!-- Jquery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!-- Bootstrap -->
