--- a/pages/admin.html
+++ b/pages/admin.html
@@ -4,6 +4,17 @@
     <title>CellSwiper</title>
     <meta charset="UTF-8"/>
 
+    <!-- Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="../styles/admin.css">
+    <script src="../scripts/admin.js"></script>
 </head>
 <body>
     <div class="row nav">
@@ -17,6 +28,23 @@
         <div class="col-md-6 margin"></div>
         <div class="col-md-2" id="account-info">
             <h3 id="name"></h3>
+        </div>
+        <div class="col-md-1 margin"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1 margin"></div>
+        <div class="col-md-5" id="image-dir">
+            <p>image directories</p>
+        </div>
+        <div class="col-md-5" id="user-list">
+            <p>users</p>
+        </div>
+        <div class="col-md-1 margin"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1 margin"></div>
+        <div class="col-md-offset-5 col-md-5">
+            <div id="assign-batch">assign batch</div>
         </div>
         <div class="col-md-1 margin"></div>
     </div>
