--- a/pages/home.html
+++ b/pages/home.html
@@ -44,10 +44,10 @@
     <div class="row">
         <div class="col-md-1 margin"></div>
         <div class="col-md-5">
-            <div id="new-batch">start new batch button</div>
+            <div id="new-batch">start new batch</div>
         </div>
         <div class="col-md-5">
-            <div id="continue-batch">continue batch button</div>
+            <div id="continue-batch">continue batch</div>
         </div>
         <div class="col-md-1 margin"></div>
     </div>
