--- a/pages/admin.html
+++ b/pages/admin.html
@@ -18,35 +18,25 @@
 </head>
 <body>
     <div class="row nav">
-        <!--Need to get hide these column margins when shifting to mobile screens-->
-        <!--Don't know if this is the best way... but I think the navbar stretching
-            across the whole screen looks better than scaling body to some % of screen-->
-        <div class="col-md-1 margin"></div>
-        <div class="col-md-2" id="logo">
+        <div class="col-xs-6 col-sm-6 col-md-offset-1 col-md-2" id="logo">
             <h3>CellSwiper</h3>
         </div>
-        <div class="col-md-6 margin"></div>
-        <div class="col-md-2" id="account-info">
+        <div class="col-xs-6 col-sm-6 col-md-offset-6 col-md-2" id="account-info">
             <h3 id="name"></h3>
         </div>
-        <div class="col-md-1 margin"></div>
     </div>
     <div class="row">
-        <div class="col-md-1 margin"></div>
-        <div class="col-md-5" id="image-dir">
+        <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-5" id="image-dir">
             <p>image directories</p>
         </div>
-        <div class="col-md-5" id="user-list">
+        <div class="col-xs-12 col-sm-12 col-md-5" id="user-list">
             <p>users</p>
         </div>
-        <div class="col-md-1 margin"></div>
     </div>
     <div class="row">
-        <div class="col-md-1 margin"></div>
-        <div class="col-md-offset-5 col-md-5">
+        <div class="col-xs-12 col-sm-12 col-md-offset-6 col-md-5">
             <div id="assign-batch">assign batch</div>
         </div>
-        <div class="col-md-1 margin"></div>
     </div>
 </body>
 </html>
