--- a/pages/admin.html
+++ b/pages/admin.html
@@ -13,13 +13,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
+    <link rel="stylesheet" href="../styles/theme.css">
     <link rel="stylesheet" href="../styles/admin.css">
     <script src="../scripts/admin.js"></script>
 </head>
 <body>
     <div class="row nav">
-        <div class="col-xs-6 col-sm-6 col-md-offset-1 col-md-2" id="logo">
-            <h3>CellSwiper</h3>
+        <div class="col-xs-6 col-sm-6 col-md-offset-1 col-md-2">
+            <h3 id="logo">CellSwiper</h3>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-offset-6 col-md-2" id="account-info">
             <h3 id="name"></h3>
