--- a/pages/home.html
+++ b/pages/home.html
@@ -11,6 +11,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
+    <link rel="stylesheet" href="../styles/theme.css">
     <link rel="stylesheet" href="../styles/home.css">
     <script src="../scripts/home.js"></script>
 
@@ -18,18 +19,12 @@
 </head>
 <body>
     <div class="row nav">
-        <!--Need to get hide these column margins when shifting to mobile screens-->
-        <!--Don't know if this is the best way... but I think the navbar stretching
-            across the whole screen looks better than scaling body to some % of screen-->
-        <div class="col-md-1 margin"></div>
-        <div class="col-md-2" id="logo">
-            <h3>CellSwiper</h3>
+        <div class="col-xs-6 col-sm-6 col-md-offset-1 col-md-2">
+            <h3 id="logo">CellSwiper</h3>
         </div>
-        <div class="col-md-6 margin"></div>
-        <div class="col-md-2" id="account-info">
+        <div class="col-xs-6 col-sm-6 col-md-offset-6 col-md-2" id="account-info">
             <h3 id="name"></h3>
         </div>
-        <div class="col-md-1 margin"></div>
     </div>
     <div class="row">
         <div class="col-md-1 margin"></div>
