--- a/pages/admin.html
+++ b/pages/admin.html
@@ -4,6 +4,7 @@
     <title>CellSwiper</title>
     <meta charset="UTF-8"/>
 
+    <!--Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!-- Bootstrap -->
@@ -13,8 +14,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
+
+
+    <!-- Local stylesheets-->
     <link rel="stylesheet" href="../styles/theme.css">
     <link rel="stylesheet" href="../styles/admin.css">
+
+    <!-- Local JavaScript -->
     <script src="../scripts/admin.js"></script>
 </head>
 <body>
