--- a/pages/home.html
+++ b/pages/home.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <title>CellSwiper</title>
+    <meta charset="UTF-8"/>
+
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
     <!-- Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
@@ -9,13 +14,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
 
+    <!-- Local stylesheets -->
     <link rel="stylesheet" href="../styles/theme.css">
     <link rel="stylesheet" href="../styles/home.css">
+
+    <!-- Local JavaScript-->
     <script src="../scripts/home.js"></script>
 
-    <meta charset="UTF-8">
 </head>
 <body>
     <div class="row nav">
