Change "structure" to "feature" and begin integrating batch status

--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -28,7 +28,7 @@
                         <div id="bad-button" class="col-md-4">
                             <span class="glyphicon glyphicon-remove"></span>
                         </div>
-                        <div id="structure" class="col-md-4"></div>
+                        <div id="feature" class="col-md-4"></div>
                         <div id="good-button" class="col-md-4">
                             <span class="glyphicon glyphicon-ok"></span>
                         </div>
