--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -31,9 +31,9 @@
 						<label class="shift">Name:</label>
 					</div>
 					<div class="input-container">
-						<input type="text" id="structure" name="structure" required>
+						<input type="text" id="feature" name="feature" required>
 						<span class="bar"></span>
-						<label class="shift">Structure:</label>
+						<label class="shift">Feature:</label>
 					</div>
 					<div class="input-container">
 						<input type="submit" id="start" value="START">
