--- a/pages/home.html
+++ b/pages/home.html
@@ -38,6 +38,11 @@
         <div class="col-md-1 margin"></div>
         <div class="col-md-5" id="image-dir">
             <p>image directories</p>
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+                    <span class="caret"></span></button>
+                <ul class="dropdown-menu" id="feature-dropdown"></ul>
+            </div>
         </div>
         <div class="col-md-5" id="task-list">
             <p>tasks</p>
