change dropdown button title when item is clicked

--- a/pages/home.html
+++ b/pages/home.html
@@ -39,8 +39,10 @@
         <div class="col-md-5" id="image-dir">
             <p>image directories</p>
             <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-                    <span class="caret"></span></button>
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropdown-button">
+                    Select a Structure
+                    <span class="caret"></span>
+                </button>
                 <ul class="dropdown-menu" id="feature-dropdown"></ul>
             </div>
         </div>
