use anchor tags for list items

--- a/pages/home.html
+++ b/pages/home.html
@@ -43,7 +43,7 @@
                     Select a Structure
                     <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu" id="feature-dropdown"></ul>
+                <div class="dropdown-menu" id="feature-dropdown"></div>
             </div>
         </div>
         <div class="col-md-5" id="task-list">
