btn-secondary instead of primary

--- a/pages/home.html
+++ b/pages/home.html
@@ -39,7 +39,7 @@
         <div class="col-md-5" id="image-dir">
             <p>image directories</p>
             <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropdown-button">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" id="dropdown-button">
                     Select a Structure
                     <span class="caret"></span>
                 </button>
