restyle to camelcase and wrap anchors in list tags

--- a/pages/home.html
+++ b/pages/home.html
@@ -39,11 +39,11 @@
         <div class="col-md-5" id="image-dir">
             <p>image directories</p>
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" id="dropdown-button">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropdownMenuButton">
                     Select a Structure
                     <span class="caret"></span>
                 </button>
-                <div class="dropdown-menu" id="feature-dropdown"></div>
+                <ul class="dropdown-menu" id="feature-dropdown" aria-labelledby="dropdownMenuButton"></ul>
             </div>
         </div>
         <div class="col-md-5" id="task-list">
