Batch UI creation working

--- a/pages/batch_list.html
+++ b/pages/batch_list.html
@@ -13,27 +13,8 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
     </head>
     <body>
-        <div class="batch-wrapper" style="height:40px;">
-            <ul class="list-group">
-                <li data-toggle="collapse" data-target="#2017-list" class="year list-group-item collapsed">
-                    <span class="expand-glyph glyphicon glyphicon-chevron-down"></span>
-                    2017
-                </li>
-                <div data-year="2017" id="2017-list" class="collapse year-list">
-                    <li class="month list-group-item">December <span class="text-right text-nowrap"><button class="btn btn-sm btn-primary right">Y</button></span></li>
-                    <li class="month list-group-item">October</li>
-                    <li class="month list-group-item">June</li>
-                </div>
-                <li data-toggle="collapse" data-target="#2016-list" class="year list-group-item collapsed">
-                    <span class="expand-glyph glyphicon glyphicon-chevron-down"></span>
-                    2016
-                </li>
-                <div data-year="2016" id="2016-list" class="collapse year-list">
-                    <li class="month list-group-item">December</li>
-                    <li class="month list-group-item">October</li>
-                    <li class="month list-group-item">June</li>
-                </div>
-            </ul>
+        <div id="batch-wrapper" style="height:40px;">
+
         </div>
     </body>
 </html>
