--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -1,4 +1,5 @@
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script> 
     <script src="../scripts/annotation.js"></script>
@@ -15,24 +16,24 @@
             <div id="user" class="col-md-3"></div>
         </div>
         <div id="swiper" class="row">
-            <div id="bad" class="col-md-3"></div>
-            <div class="col-md-6">
+            <div id="bad" class="col-md-3 hidden-xs hidden-sm"></div>
+            <div class="col-md-6" .embed-responsive>
                 <div id="polaroid">
                     <div class="polaroid-image">
                         <img id="image" src="">
                     </div>
                     <div class="row polaroid-text">
-                        <div id="bad-button" class="col-md-4">
+                        <div id="bad-button" class="col-xs-4">
                             <span class="glyphicon glyphicon-remove"></span>
                         </div>
-                        <div id="structure" class="col-md-4"></div>
-                        <div id="good-button" class="col-md-4">
+                        <div id="structure" class="col-xs-4"></div>
+                        <div id="good-button" class="col-xs-4">
                             <span class="glyphicon glyphicon-ok"></span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="good" class="col-md-3"></div>
+            <div id="good" class="col-md-3 hidden-xs hidden-sm"></div>
         </div>
     </body>
 </html>
