--- a/pages/admin.html
+++ b/pages/admin.html
@@ -21,8 +21,10 @@
     <!-- Local stylesheets-->
     <link rel="stylesheet" href="../styles/theme.css">
     <link rel="stylesheet" href="../styles/admin.css">
+    <link rel="stylesheet" href="../styles/batch_list.css">
 
     <!-- Local JavaScript -->
+    <script src="../scripts/batch_list.js"></script>
     <script src="../scripts/admin.js"></script>
 </head>
 <body>
@@ -36,7 +38,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-5" id="image-dir">
-            <p>image directories</p>
+            Loading...
         </div>
         <div class="col-xs-12 col-sm-12 col-md-5" id="user-list">
             <p>users</p>
