--- a/pages/batch_list.html
+++ b/pages/batch_list.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="../styles/batch_list.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sansita" rel="stylesheet">
+        <script>
+            createBatchUI("batch-wrapper");
+        </script>
     </head>
     <body>
         <div id="batch-wrapper" style="height:40px;">
