--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -20,7 +20,7 @@
         </div>
         <div id="swiper" class="row">
             <div id="bad" class="col-md-3 hidden-xs hidden-sm"></div>
-            <div class="col-md-6" .embed-responsive>
+            <div class="col-md-6">
                 <div id="polaroid">
                     <div class="polaroid-image">
                         <div id="image-container">
@@ -32,8 +32,8 @@
                         <div id="bad-button" class="col-xs-4">
                             <span class="glyphicon glyphicon-remove"></span>
                         </div>
-                        <div id="feature" class="col-md-4"></div>
-                        <div id="good-button" class="col-md-4">
+                        <div id="feature" class="col-xs-4"></div>
+                        <div id="good-button" class="col-xs-4">
                             <span class="glyphicon glyphicon-ok"></span>
                         </div>
                     </div>
