--- a/pages/home.html
+++ b/pages/home.html
@@ -42,7 +42,7 @@
             <p>image directories</p>
             <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropdownMenuButton">
-                    Select a Structure
+                    Select a Feature
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" id="feature-dropdown" aria-labelledby="dropdownMenuButton"></ul>
