initial flexbox refactor

--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -14,19 +14,13 @@
         <link rel="stylesheet" href="../styles/annotation.css">
     </head>
     <body>
-        <div id="navbar" class="row">
-            <div id="logo" class="col-md-9"></div>
-            <div id="user" class="col-md-3"></div>
-        </div>
         <div id="swiper" class="row">
             <div id="bad" class="col-md-3 hidden-xs hidden-sm"></div>
-            <div class="col-md-6">
-                <div id="polaroid">
+            <div class="col-md-6 card-container">
+                <div id="polaroid" class="card">
                     <div class="polaroid-image">
-                        <div id="image-container">
-                            <img id="image" src="">
-                            <div id="openseadragon" style="display: none;"></div>
-                        </div>
+                        <img id="image" src="">
+                        <div id="openseadragon" style="display: none;"></div>
                     </div>
                     <div class="row polaroid-text">
                         <div id="bad-button" class="col-xs-4">
