Added batch select ui for export page

--- a/pages/export.html
+++ b/pages/export.html
@@ -32,6 +32,11 @@
                 </select>
                 <input id="date-select" type="date" name="date-select">
             </div>
+            <div class="form-group">
+                <label for="batch-check">By Batch</label>
+                <input type="checkbox" id="batch-check" value="">
+                <select id="batch-select" name="batch-select"></select>
+            </div>
             <input id="export-button" type="submit" class="col-xs-offset-5 btn btn-large btn-primary" value="Export as CSV">
         </form>
     </body>
