--- a/pages/export.html
+++ b/pages/export.html
@@ -37,6 +37,11 @@
                 <input type="checkbox" id="batch-check" value="">
                 <select id="batch-select" name="batch-select"></select>
             </div>
+            <div class="form-group">
+                <label for="feature-check">By Feature</label>
+                <input type="checkbox" id="feature-check" value="">
+                <select id="feature-select" name="batch-select"></select>
+            </div>
             <input id="export-button" type="submit" class="col-xs-offset-5 btn btn-large btn-primary" value="Export as CSV">
         </form>
     </body>
