Start-page rendering
Start-page renders properly on mobile

--- a/pages/start_page.html
+++ b/pages/start_page.html
@@ -18,10 +18,10 @@
 
 <body>
 	<div class="row">
-		<div class="col-md-3 vcenter" id="sidebar">
+		<div class="col-xs-3 vcenter" id="sidebar">
 			<div class="line"></div>
 		</div>
-		<div class="col-md-9 menu-container vcenter">
+		<div class="col-xs-9 menu-container vcenter">
 			<div class="form-container">
 				<h1 id="title">CellSwiper</h1>
 				<form class="submit-form" autocomplete="off">
