Add error catching to batch_list and home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -25,6 +25,7 @@
     <!-- Local JavaScript-->
     <script src="../scripts/batch_list.js"></script>
     <script src="../scripts/home.js"></script>
+    <script src="../scripts/errors.js"></script>
 
 </head>
 <body>
