--- a/pages/annotation.html
+++ b/pages/annotation.html
@@ -14,6 +14,11 @@
 
         <link rel="stylesheet" href="../styles/theme.css">
         <link rel="stylesheet" href="../styles/annotation.css">
+
+        <!--Cache settings-->
+        <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="pragma" content="no-cache" />
+        <meta http-equiv="expires" content="0" />
     </head>
     <body>
         <div id="navbar" class="row">
