Add error handling to add_directory page

--- a/pages/add_directory.html
+++ b/pages/add_directory.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous"></script>
         <script src="../scripts/awesomplete/awesomplete.js"></script>
         <script src="../scripts/add_directory.js"></script>
+        <script src="../scripts/errors.js"></script>
         <link rel="stylesheet" href="../scripts/awesomplete/awesomplete.css">
         <link rel="stylesheet" href="../styles/add_directory.css">
         <meta charset="UTF-8">
