--- a/pages/home.html
+++ b/pages/home.html
@@ -49,9 +49,7 @@
                     </button>
                     <ul class="dropdown-menu" id="feature-dropdown" aria-labelledby="dropdownMenuButton"></ul>
                 </div>
-                <div id="batch-wrapper">
-
-                </div>
+                <div id="batch-wrapper"></div>
                 <div id="continue-batch">continue batch</div>
             </div>
         </div>
