title size and text field animation fixed

--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
                     <ul class="dropdown-menu" id="feature-dropdown" aria-labelledby="dropdownMenuButton"></ul>
                 </div>
                 <div id="batch-wrapper"></div>
-                <div id="continue-batch">continue batch</div>
+                <div class="continue-batch">continue last batch<span class="glyphicon glyphicon-chevron-right"></span></div>
             </div>
         </div>
     </div>
