--- a/pages/home.html
+++ b/pages/home.html
@@ -59,8 +59,11 @@
     </div>
     <div class="row">
         <div class="col-md-1 margin"></div>
-        <div class="col-md-5 col-md-offset-5">
-            <div id="continue-batch">continue batch</div>
+        <div class="col-md-5">
+            <div id="new-batch">Add new batch</div>
+        </div>
+        <div class="col-md-5">
+            <div id="continue-batch">Continue batch</div>
         </div>
         <div class="col-md-1 margin"></div>
     </div>
