remove continue batch button

--- a/pages/home.html
+++ b/pages/home.html
@@ -51,12 +51,12 @@
                     <ul class="dropdown-menu" id="feature-dropdown" aria-labelledby="dropdownMenuButton"></ul>
                 </div>
                 <div id="batch-wrapper"></div>
-                <div class="continue-batch">
-                    <span class="continue-text">
-                        continue last batch
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </span>
-                </div>
+                <!--<div class="continue-batch">-->
+                    <!--<span class="continue-text">-->
+                        <!--continue last batch-->
+                        <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
+                    <!--</span>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
