size and margins for elements onscreen

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,6 +3,7 @@
 <head>
     <title>CellSwiper</title>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -35,7 +36,7 @@
                 <div class="line"></div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-9 interface">
-                <h2>CellSwiper</h2>
+                <h1>CellSwiper</h1>
                 <form class="submit-form" autocomplete="off">
                     <div class="input-container">
                         <input type="text" id="name" name="name" required>
