Batch ui is not shown until feature is selected

--- a/pages/home.html
+++ b/pages/home.html
@@ -51,7 +51,7 @@
                     </button>
                     <ul class="dropdown-menu" id="feature-dropdown" aria-labelledby="dropdownMenuButton"></ul>
                 </div>
-                <div id="batch-wrapper"></div>
+                <div id="batch-wrapper" style="opacity: 0;"></div>
                 <!--<div class="continue-batch">-->
                     <!--<span class="continue-text">-->
                         <!--continue last batch-->
