--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
                     </button>
                     <ul class="dropdown-menu" id="feature-dropdown" aria-labelledby="dropdownMenuButton"></ul>
                 </div>
-                <div id="batch-wrapper" style="opacity: 0;"></div>
+                <div id="batch-wrapper" style="visibility: hidden; opacity: 0;"></div>
                 <a href="/add-directory" class="btn btn-primary col-xs-5 col-md-3 text-center">Add New Batch</a>
                 <a href="/complete" class="btn btn-primary col-xs-5 col-xs-offset-2 col-md-3 col-md-offset-2">Export</a>
             </div>
