add home button export data page

--- a/pages/export.html
+++ b/pages/export.html
@@ -18,8 +18,15 @@
     </head>
     <body>
         <div class="container">
-            <div class="row">
-                <h1 class="col-xs-12 col-md-8 col-md-offset-2 text-center">Export Page</h1>
+            <div class="row top-bar">
+                <div class="col-xs-12 col-md-4">
+                    <button class="btn btn-primary" id="home-button">
+                        <a href="/"><span class="glyphicon glyphicon-home"></span></a>
+                    </button>
+                </div>
+                <div class="col-xs-12 col-md-8 title">
+                    <h1>Export Data</h1>
+                </div>
             </div>
             <form id="export-form">
                 <div id="date-panel" class="panel panel-default col-xs-12 col-md-5">
