--- a/pages/export.html
+++ b/pages/export.html
@@ -20,9 +20,9 @@
         <div class="container">
             <div class="row top-bar">
                 <div class="col-xs-12 col-md-4">
-                    <button class="btn btn-primary" id="home-button">
-                        <a href="/"><span class="glyphicon glyphicon-home"></span></a>
-                    </button>
+                    <a href="/" class="btn btn-primary" id="home-button">
+                        <span class="glyphicon glyphicon-home"></span>
+                    </a>
                 </div>
                 <div class="col-xs-12 col-md-8 title">
                     <h1>Export Data</h1>
