--- a/pages/add_batch.html
+++ b/pages/add_batch.html
@@ -13,7 +13,7 @@
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
         <script src="../scripts/awesomplete/awesomplete.js"></script>
-        <script src="../scripts/add_directory.js"></script>
+        <script src="../scripts/add_batch.js"></script>
         <script src="../scripts/errors.js"></script>
         <link rel="stylesheet" href="../styles/theme.css">
         <link rel="stylesheet" href="../scripts/awesomplete/awesomplete.css">
